refactor hearing duration into common SSCS-10291